--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "@babel/core": "^7.10.2",
-    "cross-env": "^7.0.2",
-    "d3": "^5.16.0"
+    "cross-env": "^7.0.2"
   }
 }
