--- a/package.json
+++ b/package.json
@@ -5,26 +5,28 @@
   "author": "casderooij <hello@casderooij.nl>",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development rollup --config rollup.config.js --watch",
-    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js"
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
     "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@lopatnov/rollup-plugin-uglify": "^1.2.1",
     "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-url": "^5.0.1",
     "autoprefixer": "^9.8.0",
     "cssnano": "^4.1.10",
     "rollup": "^2.12.0",
     "rollup-plugin-browsersync": "^1.1.0",
     "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-svelte": "^5.2.2",
+    "rollup-plugin-terser": "^6.1.0",
     "sass": "^1.26.7",
+    "svelte": "^3.23.2",
     "tailwindcss": "^1.4.6",
     "terser": "^4.7.0"
   },
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "cross-env": "^7.0.2"
   }
 }
